# CE5303-embedded-systems-studio

./: .gitignore  README.md
assignment_01/: Ejercicio1.txt
assignment_01/Ej2/: Ejercicio2.txt
assignment_01/Ej4/: laodisea00homeuoft_djvu.txt
assignment_02/: README.md  calc.c  run_shared.sh
assignment_02/lib/: stdmath.c
assignment_03/: Makefile  README.md
assignment_03/include/: stdmath.h
assignment_03/lib/: Makefile  stdmath.c
assignment_03/src/: Makefile  calculator.c
assignment_04/sample/: README.md
assignment_05/libstdmath/: CMakeLists.txt  install.sh  main.c
assignment_05/libstdmath/lib/: CMakeLists.txt  stdmath.c
assignment_07/: README.md  configure.ac
assignment_07/lib/: Makefile.am  raspGPIO.c
assignment_07/raspGPIO/: CMakeLists.txt  Readme.md  example.c  run.example.sh
assignment_07/raspGPIO/include/: raspGPIO.h
assignment_07/raspGPIO/src/: raspGPIO.c
assignment_07/src/: Makefile.am  main.c
assignment_08/: README.md
assignment_08/01_load_and_remove_module/: run.sh
assignment_08/02_create_and_remove_driver/: hello.c  run.sh
assignment_08/03_memory_driver/: memory.c  run.sh
assignment_08/04_memory_driver_32b/: memory_32.c  run.sh
assignment_09/: README.md
assignment_09/libtime_turner/: configure.ac
assignment_09/timer-mod/: timer-mod.bb  timer.c
assignment_10/: README.md
assignment_10/libdrivergpio-1.0/: configure.ac
assignment_10/libraspGPIO/: configure.ac
assignment_10/sample/: gpio.c
taller-01/: T1_EstebanAlvarado.tar.xz
taller-01/Ej2/: Ejercicios.tar
taller-02/: run_static.sh
taller-07/: README.md
(+52 files in other folders)
